# telemetry-capstone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/capstone_cli/: Commands.cpp  Commands.h  main.cpp
apps/reader_demo/: main.cpp
apps/recorder_demo/: main.cpp
apps/simulator_demo/: main.cpp
docs/: architecture.md  examples.md  file_format.md
include/telemetry/: CRC.h  Config.h  Exporter.h  Logger.h  PacketReader.h  PacketWriter.h  TelemetryFormat.h  TelemetryFrame.h  TelemetryReader.h  TelemetryRecorder.h  TelemetrySimulator.h
src/: CRC.cpp  Config.cpp  Exporter.cpp  Logger.cpp  PacketReader.cpp  PacketWriter.cpp  TelemetryFrame.cpp  TelemetryReader.cpp  TelemetryRecorder.cpp  TelemetrySimulator.cpp
tests/: CMakeLists.txt  test_crc.cpp  test_exporter.cpp  test_logger.cpp  test_packet_reader.cpp  test_packet_writer.cpp  test_reader.cpp  test_recorder.cpp  test_telemetry_frame.cpp  test_utils.h
